2011-01-08  Lars Gregori  <github+twittering-mode@mail.beidfarbig.de>

	* twittering-mode.el: Added bit.ly URL shortening service.
	An account with a login and API key is necessary. The API key
	can be set on http://bit.ly/a/account page.
	(twittering-tinyurl-service): Added 'tinyurl as service.
	(twittering-bitly-login): The bit.ly login name.
	(twittering-bitly-api-key): The bit.ly API key.
	(twittering-tinyurl-services-map): Is now a function to use
	bit.ly login name and API key.
	(twittering-tinyurl-get): Handles twittering-tinyurl-services-map
	with a list as value.

2011-01-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Ensure that encrypted strings are written
	with no conversion. Thanks to Sakuma.
	(twittering-write-and-encrypt): ensure that encrypted strings are
	written with no conversion.

2010-12-17  Yuto HAYAMIZU  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-organic-retweet): prohibit
	retweeting protected tweets.

2010-11-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Ensure that the methods using url library
	works well for HTTP redirection.
	(twittering-send-http-request-urllib): make the variable,
	`url-http-attempt-keepalives', buffer-local in order to send the
	local value to the sentinel invoked for HTTP redirection. If the
	variable is not made buffer-local, the connection with redirection
	may not be closed according to its global value.

	* twittering-mode.el: Introduce an ad-hoc treatment for url
	library on Emacs21 again. This ensures that the sentinel for an
	redirect HTTP request, such as asynchronous retrieval of icon
	images, works well.
	(twittering-send-http-request): introduce an ad-hoc treatment for
	the url library again. It is required because the process for a
	redirected HTTP request is alive when the url library for Emacs21
	invokes the callback.
	(twittering-send-http-request-urllib): add an ad-hoc treatment for
	HTTP redirection on Emacs21.
