@@ -1,9 +1,16 @@
+2011-01-11  Lars Gregori  <github+twittering-mode@mail.beidfarbig.de>
+
+	* twittering-mode.el: Added j.mp URL shortening service. (Same
+	as bit.ly).
+	(twittering-tinyurl-service): Added 'jmp as service.
+	(twittering-tinyurl-services-map): Added jmp API.
+
 2011-01-08  Lars Gregori  <github+twittering-mode@mail.beidfarbig.de>
 
 	* twittering-mode.el: Added bit.ly URL shortening service.
 	An account with a login and API key is necessary. The API key
 	can be set on http://bit.ly/a/account page.
-	(twittering-tinyurl-service): Added 'tinyurl as service.
+	(twittering-tinyurl-service): Added 'bitly as service.
 	(twittering-bitly-login): The bit.ly login name.
 	(twittering-bitly-api-key): The bit.ly API key.
 	(twittering-tinyurl-services-map): Is now a function to use
